# libsignal-protocol-c

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  README.md  cdk-win32.patch
app/: CMakeLists.txt  app.c  app.h  arraylist.h  crypto_provider_mbedtls.c  crypto_provider_mbedtls.h  curses_window.c  curses_window.h  endianness.h  lock.c  loki.c  loki.h  main.c  mnemonic.c  mnemonic.h  pow.c  strings.c
crypto/: CMakeLists.txt  aes.c  aesni.c  net_sockets.c  scrub_data.c  timing.c
crypto/mbedtls/: aesni.h  bn_mul.h  config.h
http/: CMakeLists.txt  client.c  http.c  http.h
include/: stdint.h
json/: CMakeLists.txt  buf.c  buf.h  cjson.c  json.c  json.h
libloki/: CMakeLists.txt  README  crypto_provider_mbedtls.c  crypto_provider_mbedtls.h  lock.c  loki.h  pow.c
src/: CMakeLists.txt  curve.c  curve.h  signal_protocol.c
src/curve25519/ed25519/tests/: internal_fast_tests.c
tests/: CMakeLists.txt  crypto_benchmark.c  crypto_selftest.c  test_common_mbedtls.c  test_http_client.c  test_json_parse.c
